# sankakuproxy

./: .gitignore  Dockerfile  Makefile  create_env.sh  docker-compose.yml  package-lock.json  package.json  pyrightconfig.json
.deploy/: codebuild.yaml
front/: Dockerfile  package-lock.json
front/components/: Image.jsx  gazou.jsx  modal.jsx
front/lib/: api.js
front/pages/: index.js
front/styles/: Home.module.css
prox/: gateways.py  main.py  myconfig.py  pyproject.toml  usecases.py
prox/prox/: __init__.py
prox/tests/: test_prox.py
web/conf.d/: app.conf
