[tool.isort]
profile = "black"

[tool.pyright]
include = ["."]
exclude = [
    "**/node_modules",
    "**/__pycache__"
]
venvPath = ".venv"
verboseOutput = true

[tool.flake8]
max-line-length = 88
extend-ignore = "E203,"
max-complexity = 10
extend-exclude = ".venv,node_modules,.git"

[tool.poetry]
name = "prox"
version = "0.1.0"
description = ""
authors = ["tamanobi <tamanobi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.7b0"
isort = "^5.9.2"
pyproject-flake8 = "^0.0.1-alpha.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
