[tool.isort]
profile = "black"

[tool.pyright]
include = ["."]
exclude = [
    "**/node_modules",
    "**/__pycache__"
]
venvPath = ".venv"
verboseOutput = true

[tool.flake8]
max-line-length = 88
extend-ignore = "E203,"
max-complexity = 10
extend-exclude = ".venv,node_modules,.git"

[tool.pytest.ini_options]
minversion = "6.2"
addopts = "-vvv"
norecursedirs = [
    ".git",
    "__pycache__"
]
python_files = [
    "test_*.py"
]

[tool.poetry]
name = "prox"
version = "0.1.0"
description = ""
authors = ["tamanobi <tamanobi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.66.1"
uvicorn = {extras = ["standard"], version = "^0.14.0"}
requests = "^2.26.0"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
black = "^21.7b0"
isort = "^5.9.2"
pyproject-flake8 = "^0.0.1-alpha.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
